# Video-chem-balancer

./: .gitattributes  .gitignore  Cargo.toml  chem_balancer.py  chem_parser  chem_parser.py  chem_solver.py  data_cleaning.ipynb  pyproject.toml  utils.py
deploy/src/: domain.rs  lib.rs  main.rs  parser.rs  solver.rs  wasm.rs
deploy/web/: app.js  index.html  style.css
notes/: chem-art.cls  chem-art.sty  chem-graphs.sty  header_art.tex  main.tex  references.bib
notes/resources/: CrO5.tex  S2O3.tex  fig-gauss-elemination1.tex  gauss-elim-step1.tex  gauss-elim-step2.tex  gauss-elim-steps.tex  obs-br2-nh3.tex  obs-cu-no3.tex  obs-fes2-o2.tex  obs-o2-hcl.tex  redox-gauss.tex  solve-eq.tex
python/: data_cleaning.ipynb
python/chem_balancer/: __init__.py  parser.py  solver.py  utils.py
rust/src/: main.rs
src/: main.rs  parser.rs
video/: intro.py  utils.py
