[project]
name = "chem-balancer"
version = "0.1.0"
description = "Source code for chem-balancer video"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openai>=2.2.0",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
