[project]
name = "chem-balancer"
version = "0.1.0"
description = "Source code for chem-balancer video"
readme = "README.md"
requires-python = ">=3.13"
# todo: make optional dependencies
dependencies = [
    "jupyter>=1.1.1",
    "manim>=0.20.1",
    "openai>=2.2.0",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
